2021-04-05  Jose E. Marchesi  <jemarch@termi>

	* libpoke/pvm-val.h (PVM_MAKE_BIG_UBIG): Define.
	(PVM_MAKE_BIG): Likewise.
	(PVM_MAKE_UBIG): Likewise.
	(PVM_VAL_BIG): Likewise.
	(PVM_VAL_BIG_SIZE): Likewise.
	(PVM_VAL_UBIG): Likewise.
	(PVM_VAL_UBIG_SIZE): Likewise.
	* libpoke/pvm.h: Prototypes for pvm_make_big and pvm_make_ubig.
	* libpoke/pvm-val.c (pvm_make_big): New function.
	(pvm_make_ubig): Likewise.
	(pvm_val_equal_p): Support for `big' and `ubig' values.
	(pvm_sizeof): Likewise.
	(pvm_print_val_1): Likewise.
	(pvm_typeof): Likewise.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Check for libgmp.
	* DEPENDENCIES: Note libgmp as a mandatory dependency.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_token_kind): The token is no longer
	an index.
	(hserver_token_cmd): Likewise.
	(hserver_token_function): Likewise.
	(hserver_token_p): Likewise.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Load pk-hserver.pk directly.
	* poke/pk-hserver.h: Remove pk_hserver_load.
	* poke/pk-hserver.c (pk_hserver_load): Remove function.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk (pk_help): Generate hyperlinks for help topics.
	* poke/pk-dump.pk (pk_dump_addr_hyperlinks): New variable.
	(dump): Support emitting hyperlinnks for printed bytes.
	* doc/poke.texi (Presentation options for @command{dump}):
	Document the hyperlinks support in dump.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.c (pk_hserver_load): New function.
	* poke/poke.c (initialize): Make sure pk-hserver.pk gets loaded
	before poke.pk and the cmd subsystem.

2021-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_info_ios): Add column for button
	[close].
	(print_info_ios): Emit a [close] button as a hyperlink.

2021-04-04  Egeyar Bagcioglu  <egeyar@gmail.com>

	* doc/poke.texi: Adjust the output of ".info ios".
	* libpoke/libpoke.c (pk_ios_get_bias): New.